--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-body {
+#body1 {
 	margin: 0;
 	width: 100%;
 	height: 100vh;
@@ -9,15 +9,31 @@ body {
 	animation: gradientBG 15s ease infinite;
 }
 
+#body2 {
+	margin: 0;
+	width: 100%;
+	height: 100vh;
+	font-family: "Exo", sans-serif;
+	color: #fff;
+	background: linear-gradient(-45deg, #8b0e3a, #fa5081, #f7b4a9, #fce5dd);
+	background-size: 500% 500%;
+	animation: gradientBG 20s ease infinite;
+}
 @keyframes gradientBG{
   0% {
-    background-position: 0% 50%;
+    background-position: 0% 33%;
+  }
+  25% {
+    background-position: 33% 66%;
   }
   50% {
-    background-position: 100% 50%;
+    background-position: 100% 66%;
+  }
+  75% {
+    background-position: 66% 33%;
   }
   100% {
-    background-position: 0% 50%;
+    background-position: 33% 0%;
   }
 }
 
